--- a/src/pandas_data_manipulation.ipynb
+++ b/src/pandas_data_manipulation.ipynb
@@ -203,6 +203,40 @@
    "source": [
     "### Understand how to use the classmethod of python"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Asybnchronous in Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import asyncio\n",
+    "\n",
+    "async def task_a():\n",
+    "    print(\"Started task A\")\n",
+    "    await asyncio.sleep(2)\n",
+    "    print(\"Done with task A\")\n",
+    "\n",
+    "async def main():\n",
+    "    await task_a()\n",
+    "\n",
+    "asyncio.run(main())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
